@@ -64,14 +64,14 @@
 
 
 /* common includes */
-#include "slp_linkedlist.h"
-#include "slp_buffer.h"
-#include "slp_message.h"
-#include "slp_logfile.h"
-#include "slp_compare.h"
-#include "slp_property.h"
-#include "slp_xid.h"
-#include "slp_da.h"
+#include "../common/slp_linkedlist.h"
+#include "../common/slp_buffer.h"
+#include "../common/slp_message.h"
+#include "../common/slp_logfile.h"
+#include "../common/slp_compare.h"
+#include "../common/slp_property.h"
+#include "../common/slp_xid.h"
+#include "../common/slp_da.h"
 
 #if(!defined MAX_PATH)
 #define MAX_PATH    256
